--- a/themes/bs3_theme/base.html
+++ b/themes/bs3_theme/base.html
@@ -14,6 +14,7 @@
 
         <link href="{{ base_url }}/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{ base_url }}/css/bootstrap-theme.min.css" rel="stylesheet">
+		<link href="{{ base_url }}/css/docs.min.css" rel="stylesheet">
         <link href="{{ base_url }}/css/font-awesome.min.css" rel="stylesheet">
         <link href="{{ base_url }}/css/prettify-1.0.css" rel="stylesheet">
         <link href="{{ base_url }}/css/base.css" rel="stylesheet">
@@ -39,7 +40,7 @@
 
         {% if include_search %}{% include "search.html" %}{% endif %}
 
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="{{ base_url }}/js/jquery.min.js"></script>
         <script src="{{ base_url }}/js/bootstrap.min.js"></script>
         <script src="{{ base_url }}/js/prettify-1.0.min.js"></script>
         <script src="{{ base_url }}/js/base.js"></script>
