--- a/themes/bs3_theme/nav.html
+++ b/themes/bs3_theme/nav.html
@@ -48,12 +48,12 @@
                 {% endif %}
                 <li {% if not previous_page %}class="disabled"{% endif %}>
                     <a rel="next" {% if previous_page %}href="{{ previous_page.url }}"{% endif %}>
-                        <i class="fa fa-arrow-left"></i> Anterior
+                        <i class="fa fa-arrow-left"></i> Previous
                     </a>
                 </li>
                 <li {% if not next_page %}class="disabled"{% endif %}>
                     <a rel="prev" {% if next_page %}href="{{ next_page.url }}"{% endif %}>
-                        Siguiente <i class="fa fa-arrow-right"></i>
+                        Next <i class="fa fa-arrow-right"></i>
                     </a>
                 </li>
                 {% if repo_url %}
